fix left-aligned images, add alt to them, fix UJ logo

--- a/_css/custom_divs.css
+++ b/_css/custom_divs.css
@@ -3,12 +3,21 @@
 	font-size: var(--small);
 }
 
-
+/* Figure aligned left. Uses \figcaption command */
 .fig {
-  padding-right: 2%;
-  margin-top: 1em;
-  margin-bottom: 1em;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  margin-left: 0;
+  margin-right: auto;
+
+  width: 80%;
+  padding-left: 7%;
 }
+.fig img {
+  width: 100%;
+  padding: 0;
+}
+
 
 .fig-centered {
     margin-top: 1em;
@@ -16,7 +25,6 @@
 }
 
 
-.fig img,
 .fig-centered img { /* figure */
   display: block;
   margin-top: auto;
@@ -24,9 +32,7 @@
 }
 
 
-.fig p,
 .fig-centered p { /* description of figure */
-  font-size: 15px; 
   text-align: center;
   padding-top: 1%;
   margin: auto;
@@ -40,10 +46,6 @@
   height: auto;
 }
 
-.content-section p {
-    font-weight: 200;
-    font-size: 18px;
-}
 
 .content-section h1 {
     margin-top: 0;
@@ -54,14 +56,12 @@
     font-size: 20px;
 }
 
-.content-section img {
-    width: 80%;
-    padding: 0;
-}
 
 .header {
     background-color: #262626;
     padding: 1% 1%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .baner img {
